<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_profile"
        android:title="@string/dashboard_menu_profile" />
    <item
        android:id="@+id/action_tutorial"
        android:title="@string/tutorial_menu" />
    <item
        android:id="@+id/action_ranking"
        android:title="@string/menu_ranking" />
    <item
        android:id="@+id/action_shop"
        android:title="@string/dashboard_menu_shop" />
    <item
        android:id="@+id/action_economy"
        android:title="@string/dashboard_menu_economy" />
    <item
        android:id="@+id/action_admin"
        android:title="@string/dashboard_menu_admin"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/action_admin_events"
                android:title="@string/dashboard_menu_admin_events" />
            <item
                android:id="@+id/action_admin_grants"
                android:title="@string/dashboard_menu_admin_grants" />
            <item
                android:id="@+id/action_admin_trips"
                android:title="@string/dashboard_menu_admin_trips" />
            <item
                android:id="@+id/action_admin_contracts_tutorial"
                android:title="@string/dashboard_menu_admin_contracts_tutorial" />
        </menu>
    </item>
    <item
        android:id="@+id/action_reset_game"
        android:title="@string/dashboard_menu_reset_game" />
    <item
        android:id="@+id/action_privacy"
        android:title="@string/privacy_policy" />
    <item
        android:id="@+id/action_delete_account"
        android:title="@string/account_delete" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout" />
</menu>
