<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/nav_home"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/hivesFragment"
        android:icon="@drawable/nav_apiaries"
        android:title="@string/menu_hives" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/nav_map"
        android:title="@string/menu_map" />
    <item
        android:id="@+id/marketFragment"
        android:icon="@drawable/nav_market"
        android:title="@string/menu_market" />
    <item
        android:id="@+id/obradoresFragment"
        android:icon="@drawable/nav_obrador"
        android:title="@string/menu_obradores" />
</menu>
